--- a/homework_2/index.html
+++ b/homework_2/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title><h1>Классные фильмы 2022 года</h1></title>
 </head>
 <body>
     <header>
-        <img src="https://yandex.ru/images/search?pos=4&img_url=http%3A%2F%2Fi.artfile.ru%2F3679x2069_1593253_%5Bwww.ArtFile.ru%5D.jpg&text=%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8%20%D1%84%D0%B8%D0%BB%D1%8C%D0%BC%D0%BE%D0%B2%202022&lr=2&rpt=simage&source=serp">
+        <img src="C:\Users\Dmitriy\Desktop\Homework_2">
     </header>
 </body>
 </html>
