--- a/homework_2/index.html
+++ b/homework_2/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="C:\Users\Dmitriy\Desktop\Homework_2">
+        <img src="C:\Users\Dmitriy\Desktop\Homework_2\ancharted.jpg">
     </header>
 </body>
 </html>
