add photo_1 for homework_2

--- a/homework_2/index.html
+++ b/homework_2/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="C:\Users\Dmitriy\Desktop\Homework_2\ancharted.jpg">
+        <img src="https://yandex.ru/images/search?pos=4&text=%D1%84%D0%B8%D0%BB%D1%8C%D0%BC%20%D0%B0%D0%BD%D1%87%D0%B0%D1%80%D1%82%D0%B5%D0%B4%20%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8&img_url=http%3A%2F%2Fi.artfile.ru%2F3679x2069_1593253_%5Bwww.ArtFile.ru%5D.jpg">
     </header>
 </body>
 </html>
