--- a/homework_2/index.html
+++ b/homework_2/index.html
@@ -1,14 +1,124 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title><h1>Классные фильмы 2022 года</h1></title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Фильмы с высоким рейтингом 2022 года</title>
 </head>
 <body>
     <header>
-        <img src="https://yandex.ru/images/search?pos=4&text=%D1%84%D0%B8%D0%BB%D1%8C%D0%BC%20%D0%B0%D0%BD%D1%87%D0%B0%D1%80%D1%82%D0%B5%D0%B4%20%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8&img_url=http%3A%2F%2Fi.artfile.ru%2F3679x2069_1593253_%5Bwww.ArtFile.ru%5D.jpg">
-    </header>
+        <img src="images/logo.svg.png" width="100" height="100" alt="Кинолента. Занавес. Мотор.">
+        <h1>Фильмы 2022 года которые стоит глянуть</h1>
+        <a> Список из 4-х фильмов, рейтинг которых выше 7,5 баллов на Кинопоиске.
+        </a>
+      </header>
+        <article>
+         <ul>
+            <li>
+                <h3>"Быстрее пули"</h3>
+            </li>
+         </ul>
+         <div> Рейтинг на Кинопоиске - 7,7</div>
+         <img src="https://kinopoisk-ru.clstorage.net/D164g1Q62/75e9fa0HGs/dzNlbLLUkLyrkUXZDeq2obpLweiFs1Ns-q0EcpyMwaVV7UXtc_-Pq7CLZ6YpsRa94V3rUU6JdK7-bb2jbcxn4DU2IDztno_l_s8KmVW84fbwVZfrla8bOr6wFy_H0-6Vfd9sn1XAp4uc6iTibqxL5L4drQsXnCm16SzPyniuOYlzHXN7g8PZnIGhEswKxrCutjz37KXpX3nr1Q5in5r2gHLUe7V75IOGkd4D3FbrZeuDIYUIDqQvzus08uQVnjWAVhpDXoTX0IWXtyHWNc-zo4M0wPm67Xl-7OIlU4SnyJl5ynqUQMG9q4LnAPpo1XHsuCW7Dw-fF8nDFfXHPrI9uVsUXX2p4O6Fjo058ArFhqyWNMT9gOZeR_fJDVeIt9-QcNpmp2ngpaWlzjn2eOFh9L4kpTAUpjja7Sne0w6XP4xPJnVit8H_iYaUAMEA_ZmlqjPm6bj-U078wgB1pYzUsknfaq50wqWJhNwa703rYv-VN5UHGJcN-MEV8t4PlDC0SR9lT4bG15-3sQ3UGvChtbokwuqD7EJB7M0Jf7-N3odR9l2CSdmvuoz8OcBKwE3isgaZCgeuDdfCNurDAKU1h3kEekaJ1deHnYQh5DvBiq-JFOHdi-xnRt3pIGm9kuKjX9BBpWr2pJS67SnaetR05Lg1uSwmnCrK-DDe7AioC4ZUIktUqfHKvJaPP-MZyrCvpCfr3rnyQHrM1gJYtYzjmlrkeYd-3qyftO4J41DQQcOCA6k1JqYTwfws6NQJvSyBQj9pVKHMypSHoAr6FvWoiIYv58qb_mFDzfYneKeI3b5K52yETvaNj4HtBvZP9lPlhhOWJwiiJNjSFd7DCrAkr1Uka2q3w-y-moEz6i7uu6CzF8f8l8pFe_zkKXSWkMSvW_h4hVn8grm-7wfbe_Zi650hugMLiRXY1DvA-hypBIlpMXp_lfP7h420G-Md5pOGtwzI2IbZQELM8xtYuJPzhmXnd4tX2768s8of13jRceiJFKwyK4sS3foM3OM_qBS0ciZFT5LKzZWimy_yJfK2tLEd2dy42lVHxeImXIuK4JhJ83aiduO2toftP_Fey2L4hCWxNB-fCdbZGt_aEpw8i3c5UH-p0ceXjoQowzTqvaCPNODLu_1ufMTNGUO5qMaCe_touEjegaGn1hLCVcFO-7s_kAA1jgneyR7b1BqLK5xYHFV1kffapL-TMss7wr-XhRD524jKTGHPxyp8sKHInkn1e7RfwZSEpvw7xmDRc-KGH5sCBrcm4vksxcI9tRCGdwRLXpLl65aXoA3zPde2pa4JyuSw2E5L_uIkVbSp5atr0G-Iffahu4X9N9dr9Vb9kgGaHDyDIdrOD8HhNpovqXgdU1iMyPGaoYEdxwrqnZe6E8f_nuVgRMDIA1S_otSibNRIg0vmio6mzwb9dOlv6r8qvCkHrArszjXo0gKPE5t5PFljkcPrtK6HIug71LGxkTLm1JXvTXP68QhrkZfVjUzQVoF21I-cuNAU4FXtTe-WAq0BO7szyPYXw9Ezlz-DUh1hTIbE276Mth7kHs-dloYV7ti_y1J45uQAeYiBwJ1K1V2PfMCnlJTzJN9q5kHCsRi8IQyMJ8ryH_bAF4UHpHM_Q2Gq6MuhtpMHwxvls4-IHO7Dq-5fWO3jDEm9i8SiesthtGPYn4OG_QvZX8N6970BkA0ruC_w6i3IwT2zBrhMK2JPk9PmoImTOu0B552QqyLL65bLWW_PyCF4iInemkbOSYde26e6gfUp-1zoc_W9OZQ8KKEm8_ky9vcRtDmqaSZTSJnu8qCEsSbVDvO6vpQ2_uC_81FzyNMaYrG556JN6We5T-SjorrMG_9pwUPshx2vATe6LfbdD_bZGrgQi3Q1X0eT19enq7IfxQnvgbySIMX1gtBNYOrQI2i0staMWsRIsnfhr4OQzTfSb-966J0WiCwfnTDp9zLR_ACROJhbI2NMj_H8h4StLPkj4rq2tjHt1aXRQkzg5xdun6zinm73QrF71aiIh9Q_31DFbNy7JrcnMYAD1MIA1tserwuBaBd_dLLO0p6MrgfUJfWUrqci3Mqj6VZB5_csdLq32axP8UypavSXr5TtHMZxyHfqiQuSAg2YC-H5I93yPqcXgUYRY0ixzPCeoIQh1SD0qL2WHMTZn-VjUOLFG3y6stSlecZnknvxlJ-F_DrtWNVy-roRrAkajCTW6g_h7zqUP7VgFnNci9PPua2zP_Yr07GzkRHO3JXXfW_89Bx5npbpnVfzeoFYy7ymg9YWwFz1deKiKJoqFKknz9Yv5McsrymFQxtpRLrs6amugR_qCMuVr7Qv1f-Z1Vhc5_AmTp-l84Zd32i1UsahtpDJBOFw8nXMnBiSLxGmLez1O_bfF5ckiUMFWneq4_CIroc_5iTIuYapK9jBtPFsU8_NOWygq_6YX-tkpm_WmbSzyDvgetBH5aoAnwo7vyrw8TDp9zKVJpR3I0Buqf_vvoGnB8YC4LeOiQL5-YTJRkrXxjlMhJrDgHL8W4t82bSYocsF4W3LRdueOZUmGZ8J1tA149YZvCebcBx6QYb-_ZaIhjrWKeKfoowp9cKV8U5jxewOWKiR3pBNyEyUV_C0iJ3vAdt_6G7YtwK7IhGFGMHZOtLeL48ngk0kX0iR6_WrnYAi5jTMpbW7NO7Ko85cX8TJJ12Bm9iAW8hoqWLHq5ih8CP7au9oy58HlD44gSzK_D3a3guHKadkOmFXtN3qi7yIDuI_5pGGhwDb47XOQH_e8QhLtLbLpE3WarB_1LqhpeM74F_QTsmDEbgWEIo0_98-3PgBpj-BUipbQ5Pd_5SVpgnSHf2dtK0M3v-0_0dwzecmd7CM2plm-Ey6buGcr4zxHsVJ4E__kie4AB-qGv3xF_XmK4gLn0sneGSn3c2zpakO5yHPnJeGFeDdvMpzWvjuLUiapsmlctdlqG_4p62l8B7kdvtI_6UYrCAqphXo8Tw">
+        <P>
+          <i>
+            "Пятеро наёмных убийц..."
+            <a href="Film_1.html" target="blanc">Подробнее</a>
+          </i>
+        </P>
+        </article>
+        <article>
+            <ul>
+               <li>
+                   <h3>"Гарри Поттер 20 лет спустя: Возвращение в Хогвартс"</h3>
+               </li>
+            </ul>
+            <div> Рейтинг на Кинопоиске - 8,0</div>
+            <img src="https://kinopoisk-ru.clstorage.net/D164g1Q62/75e9fa0HGs/dzNlbLLUkLyrkUXZDeq2obpLweiFs1Ns-q0EcpyMwaVV7UXtc_-Pq7CLZ6IuthC74V3uVx3bcqL_Yb2jO8Zm4DViIDTtnoq3988KkVq2tvGhAJfow6obOr6wFy_H0-6Vfd9sn1XAp4uc6iTibqxL5L4drQsXnCm16SzPyniuOYlzHXN7g8PZnIGhEswKxrCutjz37KXpX3nr1Q5in5r2gHLUe7V75IOGkd4D3FbrZeuDIYUIDqQvzus08uQVnjWAVhpDXoTX0IWXtyHWNc-zo4M0wPm67Xl-7OIlU4SnyJl5ynqUQMG9q4LnAPpo1XHsuCW7Dw-fF8nDFfXHPrI9uVsUXX2p4O6Fjo058ArFhqyWNMT9gOZeR_fJDVeIt9-QcNpmp2ngpaWlzjn2eOFh9L4kpTAUpjja7Sne0w6XP4xPJnVit8H_iYaUAMEA_ZmlqjPm6bj-U078wgB1pYzUsknfaq50wqWJhNwa703rYv-VN5UHGJcN-MEV8t4PlDC0SR9lT4bG15-3sQ3UGvChtbokwuqD7EJB7M0Jf7-N3odR9l2CSdmvuoz8OcBKwE3isgaZCgeuDdfCNurDAKU1h3kEekaJ1deHnYQh5DvBiq-JFOHdi-xnRt3pIGm9kuKjX9BBpWr2pJS67SnaetR05Lg1uSwmnCrK-DDe7AioC4ZUIktUqfHKvJaPP-MZyrCvpCfr3rnyQHrM1gJYtYzjmlrkeYd-3qyftO4J41DQQcOCA6k1JqYTwfws6NQJvSyBQj9pVKHMypSHoAr6FvWoiIYv58qb_mFDzfYneKeI3b5K52yETvaNj4HtBvZP9lPlhhOWJwiiJNjSFd7DCrAkr1Uka2q3w-y-moEz6i7uu6CzF8f8l8pFe_zkKXSWkMSvW_h4hVn8grm-7wfbe_Zi650hugMLiRXY1DvA-hypBIlpMXp_lfP7h420G-Md5pOGtwzI2IbZQELM8xtYuJPzhmXnd4tX2768s8of13jRceiJFKwyK4sS3foM3OM_qBS0ciZFT5LKzZWimy_yJfK2tLEd2dy42lVHxeImXIuK4JhJ83aiduO2toftP_Fey2L4hCWxNB-fCdbZGt_aEpw8i3c5UH-p0ceXjoQowzTqvaCPNODLu_1ufMTNGUO5qMaCe_touEjegaGn1hLCVcFO-7s_kAA1jgneyR7b1BqLK5xYHFV1kffapL-TMss7wr-XhRD524jKTGHPxyp8sKHInkn1e7RfwZSEpvw7xmDRc-KGH5sCBrcm4vksxcI9tRCGdwRLXpLl65aXoA3zPde2pa4JyuSw2E5L_uIkVbSp5atr0G-Iffahu4X9N9dr9Vb9kgGaHDyDIdrOD8HhNpovqXgdU1iMyPGaoYEdxwrqnZe6E8f_nuVgRMDIA1S_otSibNRIg0vmio6mzwb9dOlv6r8qvCkHrArszjXo0gKPE5t5PFljkcPrtK6HIug71LGxkTLm1JXvTXP68QhrkZfVjUzQVoF21I-cuNAU4FXtTe-WAq0BO7szyPYXw9Ezlz-DUh1hTIbE276Mth7kHs-dloYV7ti_y1J45uQAeYiBwJ1K1V2PfMCnlJTzJN9q5kHCsRi8IQyMJ8ryH_bAF4UHpHM_Q2Gq6MuhtpMHwxvls4-IHO7Dq-5fWO3jDEm9i8SiesthtGPYn4OG_QvZX8N6970BkA0ruC_w6i3IwT2zBrhMK2JPk9PmoImTOu0B552QqyLL65bLWW_PyCF4iInemkbOSYde26e6gfUp-1zoc_W9OZQ8KKEm8_ky9vcRtDmqaSZTSJnu8qCEsSbVDvO6vpQ2_uC_81FzyNMaYrG556JN6We5T-SjorrMG_9pwUPshx2vATe6LfbdD_bZGrgQi3Q1X0eT19enq7IfxQnvgbySIMX1gtBNYOrQI2i0staMWsRIsnfhr4OQzTfSb-966J0WiCwfnTDp9zLR_ACROJhbI2NMj_H8h4StLPkj4rq2tjHt1aXRQkzg5xdun6zinm73QrF71aiIh9Q_31DFbNy7JrcnMYAD1MIA1tserwuBaBd_dLLO0p6MrgfUJfWUrqci3Mqj6VZB5_csdLq32axP8UypavSXr5TtHMZxyHfqiQuSAg2YC-H5I93yPqcXgUYRY0ixzPCeoIQh1SD0qL2WHMTZn-VjUOLFG3y6stSlecZnknvxlJ-F_DrtWNVy-roRrAkajCTW6g_h7zqUP7VgFnNci9PPua2zP_Yr07GzkRHO3JXXfW_89Bx5npbpnVfzeoFYy7ymg9YWwFz1deKiKJoqFKknz9Yv5McsrymFQxtpRLrs6amugR_qCMuVr7Qv1f-Z1Vhc5_AmTp-l84Zd32i1UsahtpDJBOFw8nXMnBiSLxGmLez1O_bfF5ckiUMFWneq4_CIroc_5iTIuYapK9jBtPFsU8_NOWygq_6YX-tkpm_WmbSzyDvgetBH5aoAnwo7vyrw8TDp9zKVJpR3I0Buqf_vvoGnB8YC4LeOiQL5-YTJRkrXxjlMhJrDgHL8W4t82bSYocsF4W3LRdueOZUmGZ8J1tA149YZvCebcBx6QYb-_ZaIhjrWKeKfoowp9cKV8U5jxewOWKiR3pBNyEyUV_C0iJ3vAdt_6G7YtwK7IhGFGMHZOtLeL48ngk0kX0iR6_WrnYAi5jTMpbW7NO7Ko85cX8TJJ12Bm9iAW8hoqWLHq5ih8CP7au9oy58HlD44gSzK_D3a3guHKadkOmFXtN3qi7yIDuI_5pGGhwDb47XOQH_e8QhLtLbLpE3WarB_1LqhpeM74F_QTsmDEbgWEIo0_98-3PgBpj-BUipbQ5Pd_5SVpgnSHf2dtK0M3v-0_0dwzecmd7CM2plm-Ey6buGcr4zxHsVJ4E__kie4AB-qGv3xF_XmK4gLn0sneGSn3c2zpakO5yHPnJeGFeDdvMpzWvjuLUiapsmlctdlqG_4p62l8B7kdvtI_6UYrCAqphXo8Tw">
+           <P>
+             <i>
+               "Дэниэл Рэдклифф,..."
+               <a href="Film_2.html" target="blanc">Подробнее</a>
+             </i>
+           </P>
+           </article>
+           <article>
+            <ul>
+               <li>
+                   <h3>"Ласточки Христовы"</h3>
+               </li>
+            </ul>
+            <div> Рейтинг на Кинопоиске - 9,0</div>
+            <img src="https://kinopoisk-ru.clstorage.net/D164g1Q62/75e9fa0HGs/dzNlbLLUkLyrkUXZDeq2obpLweiFs1Ns-q0EcpyMwaVV7UXtc_-Pq7CLYq0guhi06V3lUUuLc6Oobb3wb5k_4DVrdzjtn4rl-c9ckVzg4fz3U5nvwKobOr6wFy_H0-6Vfd9sn1XAp4uc6iTibqxL5L4drQsXnCm16SzPyniuOYlzHXN7g8PZnIGhEswKxrCutjz37KXpX3nr1Q5in5r2gHLUe7V75IOGkd4D3FbrZeuDIYUIDqQvzus08uQVnjWAVhpDXoTX0IWXtyHWNc-zo4M0wPm67Xl-7OIlU4SnyJl5ynqUQMG9q4LnAPpo1XHsuCW7Dw-fF8nDFfXHPrI9uVsUXX2p4O6Fjo058ArFhqyWNMT9gOZeR_fJDVeIt9-QcNpmp2ngpaWlzjn2eOFh9L4kpTAUpjja7Sne0w6XP4xPJnVit8H_iYaUAMEA_ZmlqjPm6bj-U078wgB1pYzUsknfaq50wqWJhNwa703rYv-VN5UHGJcN-MEV8t4PlDC0SR9lT4bG15-3sQ3UGvChtbokwuqD7EJB7M0Jf7-N3odR9l2CSdmvuoz8OcBKwE3isgaZCgeuDdfCNurDAKU1h3kEekaJ1deHnYQh5DvBiq-JFOHdi-xnRt3pIGm9kuKjX9BBpWr2pJS67SnaetR05Lg1uSwmnCrK-DDe7AioC4ZUIktUqfHKvJaPP-MZyrCvpCfr3rnyQHrM1gJYtYzjmlrkeYd-3qyftO4J41DQQcOCA6k1JqYTwfws6NQJvSyBQj9pVKHMypSHoAr6FvWoiIYv58qb_mFDzfYneKeI3b5K52yETvaNj4HtBvZP9lPlhhOWJwiiJNjSFd7DCrAkr1Uka2q3w-y-moEz6i7uu6CzF8f8l8pFe_zkKXSWkMSvW_h4hVn8grm-7wfbe_Zi650hugMLiRXY1DvA-hypBIlpMXp_lfP7h420G-Md5pOGtwzI2IbZQELM8xtYuJPzhmXnd4tX2768s8of13jRceiJFKwyK4sS3foM3OM_qBS0ciZFT5LKzZWimy_yJfK2tLEd2dy42lVHxeImXIuK4JhJ83aiduO2toftP_Fey2L4hCWxNB-fCdbZGt_aEpw8i3c5UH-p0ceXjoQowzTqvaCPNODLu_1ufMTNGUO5qMaCe_touEjegaGn1hLCVcFO-7s_kAA1jgneyR7b1BqLK5xYHFV1kffapL-TMss7wr-XhRD524jKTGHPxyp8sKHInkn1e7RfwZSEpvw7xmDRc-KGH5sCBrcm4vksxcI9tRCGdwRLXpLl65aXoA3zPde2pa4JyuSw2E5L_uIkVbSp5atr0G-Iffahu4X9N9dr9Vb9kgGaHDyDIdrOD8HhNpovqXgdU1iMyPGaoYEdxwrqnZe6E8f_nuVgRMDIA1S_otSibNRIg0vmio6mzwb9dOlv6r8qvCkHrArszjXo0gKPE5t5PFljkcPrtK6HIug71LGxkTLm1JXvTXP68QhrkZfVjUzQVoF21I-cuNAU4FXtTe-WAq0BO7szyPYXw9Ezlz-DUh1hTIbE276Mth7kHs-dloYV7ti_y1J45uQAeYiBwJ1K1V2PfMCnlJTzJN9q5kHCsRi8IQyMJ8ryH_bAF4UHpHM_Q2Gq6MuhtpMHwxvls4-IHO7Dq-5fWO3jDEm9i8SiesthtGPYn4OG_QvZX8N6970BkA0ruC_w6i3IwT2zBrhMK2JPk9PmoImTOu0B552QqyLL65bLWW_PyCF4iInemkbOSYde26e6gfUp-1zoc_W9OZQ8KKEm8_ky9vcRtDmqaSZTSJnu8qCEsSbVDvO6vpQ2_uC_81FzyNMaYrG556JN6We5T-SjorrMG_9pwUPshx2vATe6LfbdD_bZGrgQi3Q1X0eT19enq7IfxQnvgbySIMX1gtBNYOrQI2i0staMWsRIsnfhr4OQzTfSb-966J0WiCwfnTDp9zLR_ACROJhbI2NMj_H8h4StLPkj4rq2tjHt1aXRQkzg5xdun6zinm73QrF71aiIh9Q_31DFbNy7JrcnMYAD1MIA1tserwuBaBd_dLLO0p6MrgfUJfWUrqci3Mqj6VZB5_csdLq32axP8UypavSXr5TtHMZxyHfqiQuSAg2YC-H5I93yPqcXgUYRY0ixzPCeoIQh1SD0qL2WHMTZn-VjUOLFG3y6stSlecZnknvxlJ-F_DrtWNVy-roRrAkajCTW6g_h7zqUP7VgFnNci9PPua2zP_Yr07GzkRHO3JXXfW_89Bx5npbpnVfzeoFYy7ymg9YWwFz1deKiKJoqFKknz9Yv5McsrymFQxtpRLrs6amugR_qCMuVr7Qv1f-Z1Vhc5_AmTp-l84Zd32i1UsahtpDJBOFw8nXMnBiSLxGmLez1O_bfF5ckiUMFWneq4_CIroc_5iTIuYapK9jBtPFsU8_NOWygq_6YX-tkpm_WmbSzyDvgetBH5aoAnwo7vyrw8TDp9zKVJpR3I0Buqf_vvoGnB8YC4LeOiQL5-YTJRkrXxjlMhJrDgHL8W4t82bSYocsF4W3LRdueOZUmGZ8J1tA149YZvCebcBx6QYb-_ZaIhjrWKeKfoowp9cKV8U5jxewOWKiR3pBNyEyUV_C0iJ3vAdt_6G7YtwK7IhGFGMHZOtLeL48ngk0kX0iR6_WrnYAi5jTMpbW7NO7Ko85cX8TJJ12Bm9iAW8hoqWLHq5ih8CP7au9oy58HlD44gSzK_D3a3guHKadkOmFXtN3qi7yIDuI_5pGGhwDb47XOQH_e8QhLtLbLpE3WarB_1LqhpeM74F_QTsmDEbgWEIo0_98-3PgBpj-BUipbQ5Pd_5SVpgnSHf2dtK0M3v-0_0dwzecmd7CM2plm-Ey6buGcr4zxHsVJ4E__kie4AB-qGv3xF_XmK4gLn0sneGSn3c2zpakO5yHPnJeGFeDdvMpzWvjuLUiapsmlctdlqG_4p62l8B7kdvtI_6UYrCAqphXo8Tw">
+            <p>
+              <i>
+               "27 декабря 2019..."
+               <a href="Film_3.html" target="blanc">Подробнее</a>
+             </i>
+           </P>
+           </article>
+           <article>
+            <ul>
+               <li>
+                   <h3>"1941. Крылья над Берлином "</h3>
+               </li>
+            </ul>
+            <div> Рейтинг на Кинопоиске - 7,5</div>
+            <img src="https://kinopoisk-ru.clstorage.net/D164g1Q62/75e9fa0HGs/dzNlbLLUkLyrkUXZDeq2obpLweiFs1Ns-q0EcpyMwaVV7UXtc_-Pq7CLZ6YpsRa94V25B0eOJ6iqaL2lYMlo4DVhcjTtntjk-M9ZxFSw66XxB525xKQbOr6wFy_H0-6Vfd9sn1XAp4uc6iTibqxL5L4drQsXnCm16SzPyniuOYlzHXN7g8PZnIGhEswKxrCutjz37KXpX3nr1Q5in5r2gHLUe7V75IOGkd4D3FbrZeuDIYUIDqQvzus08uQVnjWAVhpDXoTX0IWXtyHWNc-zo4M0wPm67Xl-7OIlU4SnyJl5ynqUQMG9q4LnAPpo1XHsuCW7Dw-fF8nDFfXHPrI9uVsUXX2p4O6Fjo058ArFhqyWNMT9gOZeR_fJDVeIt9-QcNpmp2ngpaWlzjn2eOFh9L4kpTAUpjja7Sne0w6XP4xPJnVit8H_iYaUAMEA_ZmlqjPm6bj-U078wgB1pYzUsknfaq50wqWJhNwa703rYv-VN5UHGJcN-MEV8t4PlDC0SR9lT4bG15-3sQ3UGvChtbokwuqD7EJB7M0Jf7-N3odR9l2CSdmvuoz8OcBKwE3isgaZCgeuDdfCNurDAKU1h3kEekaJ1deHnYQh5DvBiq-JFOHdi-xnRt3pIGm9kuKjX9BBpWr2pJS67SnaetR05Lg1uSwmnCrK-DDe7AioC4ZUIktUqfHKvJaPP-MZyrCvpCfr3rnyQHrM1gJYtYzjmlrkeYd-3qyftO4J41DQQcOCA6k1JqYTwfws6NQJvSyBQj9pVKHMypSHoAr6FvWoiIYv58qb_mFDzfYneKeI3b5K52yETvaNj4HtBvZP9lPlhhOWJwiiJNjSFd7DCrAkr1Uka2q3w-y-moEz6i7uu6CzF8f8l8pFe_zkKXSWkMSvW_h4hVn8grm-7wfbe_Zi650hugMLiRXY1DvA-hypBIlpMXp_lfP7h420G-Md5pOGtwzI2IbZQELM8xtYuJPzhmXnd4tX2768s8of13jRceiJFKwyK4sS3foM3OM_qBS0ciZFT5LKzZWimy_yJfK2tLEd2dy42lVHxeImXIuK4JhJ83aiduO2toftP_Fey2L4hCWxNB-fCdbZGt_aEpw8i3c5UH-p0ceXjoQowzTqvaCPNODLu_1ufMTNGUO5qMaCe_touEjegaGn1hLCVcFO-7s_kAA1jgneyR7b1BqLK5xYHFV1kffapL-TMss7wr-XhRD524jKTGHPxyp8sKHInkn1e7RfwZSEpvw7xmDRc-KGH5sCBrcm4vksxcI9tRCGdwRLXpLl65aXoA3zPde2pa4JyuSw2E5L_uIkVbSp5atr0G-Iffahu4X9N9dr9Vb9kgGaHDyDIdrOD8HhNpovqXgdU1iMyPGaoYEdxwrqnZe6E8f_nuVgRMDIA1S_otSibNRIg0vmio6mzwb9dOlv6r8qvCkHrArszjXo0gKPE5t5PFljkcPrtK6HIug71LGxkTLm1JXvTXP68QhrkZfVjUzQVoF21I-cuNAU4FXtTe-WAq0BO7szyPYXw9Ezlz-DUh1hTIbE276Mth7kHs-dloYV7ti_y1J45uQAeYiBwJ1K1V2PfMCnlJTzJN9q5kHCsRi8IQyMJ8ryH_bAF4UHpHM_Q2Gq6MuhtpMHwxvls4-IHO7Dq-5fWO3jDEm9i8SiesthtGPYn4OG_QvZX8N6970BkA0ruC_w6i3IwT2zBrhMK2JPk9PmoImTOu0B552QqyLL65bLWW_PyCF4iInemkbOSYde26e6gfUp-1zoc_W9OZQ8KKEm8_ky9vcRtDmqaSZTSJnu8qCEsSbVDvO6vpQ2_uC_81FzyNMaYrG556JN6We5T-SjorrMG_9pwUPshx2vATe6LfbdD_bZGrgQi3Q1X0eT19enq7IfxQnvgbySIMX1gtBNYOrQI2i0staMWsRIsnfhr4OQzTfSb-966J0WiCwfnTDp9zLR_ACROJhbI2NMj_H8h4StLPkj4rq2tjHt1aXRQkzg5xdun6zinm73QrF71aiIh9Q_31DFbNy7JrcnMYAD1MIA1tserwuBaBd_dLLO0p6MrgfUJfWUrqci3Mqj6VZB5_csdLq32axP8UypavSXr5TtHMZxyHfqiQuSAg2YC-H5I93yPqcXgUYRY0ixzPCeoIQh1SD0qL2WHMTZn-VjUOLFG3y6stSlecZnknvxlJ-F_DrtWNVy-roRrAkajCTW6g_h7zqUP7VgFnNci9PPua2zP_Yr07GzkRHO3JXXfW_89Bx5npbpnVfzeoFYy7ymg9YWwFz1deKiKJoqFKknz9Yv5McsrymFQxtpRLrs6amugR_qCMuVr7Qv1f-Z1Vhc5_AmTp-l84Zd32i1UsahtpDJBOFw8nXMnBiSLxGmLez1O_bfF5ckiUMFWneq4_CIroc_5iTIuYapK9jBtPFsU8_NOWygq_6YX-tkpm_WmbSzyDvgetBH5aoAnwo7vyrw8TDp9zKVJpR3I0Buqf_vvoGnB8YC4LeOiQL5-YTJRkrXxjlMhJrDgHL8W4t82bSYocsF4W3LRdueOZUmGZ8J1tA149YZvCebcBx6QYb-_ZaIhjrWKeKfoowp9cKV8U5jxewOWKiR3pBNyEyUV_C0iJ3vAdt_6G7YtwK7IhGFGMHZOtLeL48ngk0kX0iR6_WrnYAi5jTMpbW7NO7Ko85cX8TJJ12Bm9iAW8hoqWLHq5ih8CP7au9oy58HlD44gSzK_D3a3guHKadkOmFXtN3qi7yIDuI_5pGGhwDb47XOQH_e8QhLtLbLpE3WarB_1LqhpeM74F_QTsmDEbgWEIo0_98-3PgBpj-BUipbQ5Pd_5SVpgnSHf2dtK0M3v-0_0dwzecmd7CM2plm-Ey6buGcr4zxHsVJ4E__kie4AB-qGv3xF_XmK4gLn0sneGSn3c2zpakO5yHPnJeGFeDdvMpzWvjuLUiapsmlctdlqG_4p62l8B7kdvtI_6UYrCAqphXo8Tw">
+           <P>
+             <i>
+               "История о подвиге..."
+               <a href="Film_4.html" target="blanc">Подробнее</a>
+             </i>
+           </P>
+           </article>
+           <table width="100%" border="1" cellpadding="4" cellspacing="0">
+             <caption>Таблица фильмов с режиссёрами и жанрами</caption>
+             <tbody>
+              <tr>
+              <th>Название фильма</th>
+              <th>Жанр</th>
+              <th>Режиссёр</th>
+               </tr>
+               <tr>
+                <td>Быстрее пули</td>
+                <td>боевик, триллер, комедия</td>
+                <td>Дэвид Литч</td>
+               </tr>
+               <tr>
+                 <td>Гарри Поттер 20 лет спустя: Возвращение в Хогвартс</td>
+                 <td>семейный, документальный</td>
+                 <td>Эрен Криви, Кэйси Паттерсон, Джо Перлман, Джорджо Тести</td>
+               </tr>
+               <tr>
+                <td>Ласточки Христовы</td>
+                <td>документальный</td>
+                <td>Юлия Бочарова</td>
+              </tr>
+              <tr>
+                <td>1941. Крылья над Берлином</td>
+                <td>боевик, военный</td>
+                <td>Константин Буслов</td>
+              </tr>
+             </tbody>
+          </table>
+      <fotter> 
+        <h4> Источник информации</h4>
+        <ul>
+          <li>
+            <a href="https://www.kinopoisk.ru/" target="blanc" rel="nofollow noopener norefferrer">Сайт Кинопоиска</a>
+          </li>
+        </ul>
+        <adress>
+          Контакты
+          <p>
+            <a target="_blanc" title="Отправить письмо по электронной почте" href="mailto=zloygnom@gmail.com">zloygnom@gmail.com</a>
+          </p>
+          <p>
+            <a target="_blanc" title="Позвонить на сотовый" href="tel:+7(904)6485665">+79046485665</a>
+          </p>
+        </adress>
+      </fotter>
 </body>
 </html>
