add corrections for homework_2

--- a/homework_2/index.html
+++ b/homework_2/index.html
@@ -12,6 +12,12 @@
         <h1>Фильмы 2022 года которые стоит глянуть</h1>
         <a> Список из 4-х фильмов, рейтинг которых выше 7,5 баллов на Кинопоиске.
         </a>
+          <ol>
+            <li>Быстрее пули</li>
+            <li>Гарри Поттер 20 лет спустя: Возвращение в Хогвартс</li>
+            <li>Ласточки Христовы</li>
+            <li>1941. Крылья над Берлином</li>
+          </ol>
       </header>
         <article>
          <ul>
@@ -61,7 +67,7 @@
            <article>
             <ul>
                <li>
-                   <h3>"1941. Крылья над Берлином "</h3>
+                   <h3>"1941. Крылья над Берлином"</h3>
                </li>
             </ul>
             <div> Рейтинг на Кинопоиске - 7,5</div>
@@ -113,7 +119,7 @@
         <adress>
           Контакты
           <p>
-            <a target="_blanc" title="Отправить письмо по электронной почте" href="mailto=zloygnom@gmail.com">zloygnom@gmail.com</a>
+            <a target="_blanc" title="Отправить письмо по электронной почте" href="mailto:zloygnom@gmail.com">zloygnom@gmail.com</a>
           </p>
           <p>
             <a target="_blanc" title="Позвонить на сотовый" href="tel:+7(904)6485665">+79046485665</a>
