add for homework_3

--- a/homework_3/Index.html
+++ b/homework_3/Index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 <body>
+  
   <div>
-   <a href="List_2.html">
+   <a href="list_2.html">
     <h3>Биография Александра Суворова</h3>
    </a>
    <a href="the_periodic_table_3.html">
