--- a/homework_3/List_2.html
+++ b/homework_3/List_2.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Биография Александра Суворова</h1>
         <nav>
-          <a href="Index.html">Вернуться на главную страницу</a>
+          <a href="index.html">Вернуться на главную страницу</a>
         </nav>
 </header>
     <ul>
