--- a/homework_3/the_periodic_table_3.html
+++ b/homework_3/the_periodic_table_3.html
@@ -3,7 +3,7 @@
 <body>
     <header>
       <nav>
-        <a href="Index.html">Вернуться на главную страницу</a>
+        <a href="index.html">Вернуться на главную страницу</a>
       </nav>
       <!-- Были использованы устаревшие теги такие как: border, align, bgcolor-->
     </header>
