--- a/homework_3/video_4.html
+++ b/homework_3/video_4.html
@@ -8,7 +8,7 @@
      <body>
    <header>
     <nav>
-        <a href="Index.html">Вернуться на главную страницу</a>
+        <a href="index.html">Вернуться на главную страницу</a>
       </nav>
    </header>
      <main>
