--- a/homework_3/Index.html
+++ b/homework_3/Index.html
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 <body>
-  
   <div>
    <a href="list_2.html">
-    <h3>Биография Александра Суворова</h3>
+    <h3>1.Биография Александра Суворова</h3>
    </a>
    <a href="the_periodic_table_3.html">
-    <h3>Переодическая система Д.И.Менделеева</h3>
+    <h3>2.Переодическая система Д.И.Менделеева</h3>
    </a>
    <a href="video_4.html">
-    <h3>10 животных поражающих воображение</h3>
+    <h3>3.10 животных поражающих воображение</h3>
    </a>
   </div>
 </body>
