add for homework_3

--- a/homework_3/list_2.html
+++ b/homework_3/list_2.html
@@ -15,8 +15,7 @@
           <a href="index.html">Вернуться на главную страницу</a>
         </nav>
 </header>
-    <ul>
-        Содержание
+    <ul>Содержание</ul> 
         <ol>
            <li>
              <a href="#1">Детство</a>
@@ -34,7 +33,7 @@
             <a href="#5">Смерть</a>
             </li>
         </ol>
-    </ul>
+    
 
     <p>Александр Суворов — русский полководец, ставший основоположником российской военной теории, генералиссимус. Награжден всеми известными российскими орденами того времени, и семью иностранными.</p>
     <p>Александра Суворова называют великим полководцем, гением военного дела, победным генералиссимусом. Но как бы не звучали эпитеты в его адрес, он был и остается одним из самых великих стратегов в мировой истории. Все шестьдесят боев, в которых принимала участие его армия, закончились безоговорочной победой. Его опыт ведения военных действий уникален, он ни разу не держал оборону, все его сражения были исключительно наступательными. Ему удалось укрепить границы России так, что ни один из агрессоров не рисковал их нарушить.</p>
