add for homework_4

--- a/homework_2/index.html
+++ b/homework_2/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <img src="images/movies.jpg" alt="Кинолента. Занавес. Мотор." 
-        width="300">
+        <img src="images/logo.svg.png" alt="Кинолента. Занавес. Мотор." 
+        width="100">
         <h1>Фильмы 2022 года которые стоит глянуть</h1>
         <a> Список из 4-х фильмов, рейтинг которых выше 7,5 баллов на Кинопоиске.</a>
         <article>
