--- a/homework_4/index.html
+++ b/homework_4/index.html
@@ -7,20 +7,52 @@
     <title>Магазин часов "Кварц"</title>
 </head>
 <body>
-        <header>
-            <div class="header-container"></div>
-
-
-
-        </header>    
+    <div class="container"> 
+    <header>
+        <div class="header-container">
+            <div class="header-logo">
+                <img src="images/logo-clock.jpg" Alt="Логотип сайта часов">
+            </div>
+            <div class="header-row">
+                <div class="header-title">
+                    <h1>Магазин часов "Фортуна"</h1>
+                </div>
+                <div class="header-menu">
+                    <nav class="header-nav">
+                        <a href="#" class="header-nav-link">
+                            АКЦИИ
+                        </a>
+                        <a href="#" class="header-nav-link">
+                            МАГАЗИН
+                        </a>
+                        <a href="#" class="header-nav-link">
+                            КАК ЗАКАЗАТЬ
+                        </a>
+                        <a href="#" class="header-nav-link">
+                            ДОСТАВКА
+                        </a>
+                        <a href="#" class="header-nav-link">
+                            ГАРАНТИЯ
+                        </a>
+                        <a href="#" class="header-nav-link">
+                            ВОЗВРАТ
+                        </a>
+                        <a href="#" class="header-nav-link">
+                            КОНТАКТЫ
+                        </a>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </header>
     <main>
         <section class="cards">
             <div class="card">
-                <div class="name">
-                    Fossil CH2891
-                </div>
                 <div class="card__image">
                     <img src="images/FossilCH2891.jpg" alt="Fossil CH2891">
+                </div>
+                <div class="card__name">
+                    Fossil CH2891
                 </div>
                 <div class="card__body">
                     <div class="card__price">
@@ -33,11 +65,11 @@
                 </div>
             </div>
             <div class="card">
-                <div class="name">
-                    Diesel Mr. Daddy 2.0 DZ7434
-                </div>
                 <div class="card__image2">
                     <img src="images/DieselDZ7434.jpg" alt="Diesel Mr. Daddy 2.0 DZ7434">
+                </div>
+                <div class="card__name">
+                    Diesel Mr. Daddy 2.0 DZ7434
                 </div>
                 <div class="card__body">
                     <div class="card__price">
@@ -50,11 +82,11 @@
                 </div>
             </div>
             <div class="card">
-                <div class="name">
-                    Diesel Mega Chief DZ4464
-                </div>
                 <div class="card__image">
                     <img src="images/DieselDZ4464.jpg" alt="main card">
+                </div>
+                <div class="card__name">
+                    Diesel Mega Chief DZ4464
                 </div>
                 <div class="card__body">
                     <div class="card__price">
@@ -67,11 +99,11 @@
                 </div>
             </div>
             <div class="card">
-                <div class="name">
-                    Diesel Griffed DZ4569
-                </div>
                 <div class="card__image">
                     <img src="images/DieselDZ4569.jpg" alt="main card">
+                </div>
+                <div class="card__name">
+                    Diesel Griffed DZ4569
                 </div>
                 <div class="card__body">
                     <div class="card__price">
@@ -84,11 +116,11 @@
                 </div>
             </div>
             <div class="card">
-                <div class="name">
-                    Diesel Mega Chief DZ4551
-                </div>
                 <div class="card__image">
                     <img src="images/DieselDZ4551.jpg" alt="main card">
+                </div>
+                <div class="card__name">
+                    Diesel Mega Chief DZ4551
                 </div>
                 <div class="card__body">
                     <div class="card__price">
@@ -101,11 +133,11 @@
                 </div>
             </div>
             <div class="card">
-                <div class="name">
-                    Diesel Mr. Daddy 2.0 DZ7414
-                </div>
                 <div class="card__image2">
                     <img src="images/DieselDZ7414.jpg" alt="Diesel Mr. Daddy 2.0 DZ7414">
+                </div>
+                <div class="card__name">
+                    Diesel Mr. Daddy 2.0 DZ7414
                 </div>
                 <div class="card__body">
                     <div class="card__price">
@@ -116,9 +148,156 @@
                     </div>
                     <button class="card__buy">В корзину</button>
                 </div>
+            </div>
+            <div class="card">
+                <div class="card__image">
+                    <img src="images/FossilFS5345.jpg" alt="Fossil 44MM Townsman FS5345">
+                </div>
+                <div class="card__name">
+                    Fossil 44MM Townsman <br>FS5345
+                </div>
+                <div class="card__body">
+                    <div class="card__price">
+                        15 190 ₽ 
+                    </div>
+                    <div class="card__description">
+                        Мужские часы. Механизм кварцевый хронограф. Стекло минеральное. Дизайнерские.
+                    </div>
+                    <button class="card__buy">В корзину</button>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card__image">
+                    <img src="images/FossilBQ2163.jpg" alt="Fossil Rhett BQ2163">
+                </div>
+                <div class="card__name">
+                    Fossil Rhett BQ2163
+                </div>
+                <div class="card__body">
+                    <div class="card__price">
+                        16 567 ₽ <s>19 490 ₽</s>
+                    </div>
+                    <div class="card__description">
+                        Мужские часы. Механизм кварцевый хронограф. Стекло минеральное. Дизайнерские.
+                    </div>
+                    <button class="card__buy">В корзину</button>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card__image">
+                    <img src="images/FossilBQ2427.jpg" alt="Fossil Privateer BQ2427">
+                </div>
+                <div class="card__name">
+                    Fossil Privateer BQ2427
+                </div>
+                <div class="card__body">
+                    <div class="card__price">
+                        26 990 ₽ 
+                    </div>
+                    <div class="card__description">
+                        Мужские часы. Механизм механический с автоподзаводом. Стекло минеральное. Дизайнерские.
+                    </div>
+                    <button class="card__buy">В корзину</button>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card__image">
+                    <img src="images/FossilBQ2490.jpg" alt="Fossil Bannon BQ2490">
+                </div>
+                <div class="card__name">
+                    Fossil Bannon BQ2490
+                </div>
+                <div class="card__body">
+                    <div class="card__price">
+                        19 490 ₽ 
+                    </div>
+                    <div class="card__description">
+                        Мужские часы. Механизм кварцевый. Стильные. Стекло минеральное. Дизайнерские.
+                    </div>
+                    <button class="card__buy">В корзину</button>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card__image">
+                    <img src="images/Festina68504.jpg" alt="Festina 6850/4">
+                </div>
+                <div class="card__name">
+                    Festina 6850/4
+                </div>
+                <div class="card__body">
+                    <div class="card__price">
+                        14 034 ₽ <s>16 510 ₽</s>
+                    </div>
+                    <div class="card__description">
+                        Мужские часы. Механизм кварцевый хронограф. Стекло минеральное. Дизайнерские.
+                    </div>
+                    <button class="card__buy">В корзину</button>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card__image">
+                    <img src="images/Festina203394.jpg" alt="Festina 20339/4">
+                </div>
+                <div class="card__name">
+                    Festina 20339/4
+                </div>
+                <div class="card__body">
+                    <div class="card__price">
+                        12 155 ₽ <s>14 300 ₽</s>
+                    </div>
+                    <div class="card__description">
+                        Мужские часы. Механизм кварцевый хронограф. Стекло минеральное. Дизайнерские.
+                    </div>
+                    <button class="card__buy">В корзину</button>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card__image">
+                    <img src="images/Festina202012.jpg" alt="Festina 20201/2">
+                </div>
+                <div class="card__name">
+                    Festina 20201/2
+                </div>
+                <div class="card__body">
+                    <div class="card__price">
+                        12 835 <s>15 100 ₽</s>
+                    </div>
+                    <div class="card__description">
+                        Мужские часы. Механизм кварцевый хронограф. Стекло минеральное. Дизайнерские.
+                    </div>
+                    <button class="card__buy">В корзину</button>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card__image">
+                    <img src="images/Festina169943.jpg" alt="Festina 16994/3">
+                </div>
+                <div class="card__name">
+                    Festina 16994/3
+                </div>
+                <div class="card__body">
+                    <div class="card__price">
+                        11 135 ₽ <s>13 100 ₽</s>
+                    </div>
+                    <div class="card__description">
+                        Мужские часы. Механизм кварцевый многофункциональный. Стекло минеральное. Дизайнерские.
+                    </div>
+                    <button class="card__buy">В корзину</button>
+                </div>
             </div>   
         </section>
     </main>
+    <footer>
+        <div class="footer-body">
+            <div class="footer-contacts">
+                <h5>Контакты</h5>
+                <nav class="footer-nav">
+                    <a href="tel:+79049044404" class="link">+79049044404</a>
+                    <a href="email:fortunatime@gmail.com" class="link">fortunatime@gmail.com</a>
+                </nav>
+            </div>
+        </div>
+    </footer>
     </div>
 </body>
 </html>
