add for homework_4

--- a/homework_4/index.html
+++ b/homework_4/index.html
@@ -83,7 +83,7 @@
             </div>
             <div class="card">
                 <div class="card__image">
-                    <img src="images/DieselDZ4464.jpg" alt="main card">
+                    <img src="images/DieselDZ4464.jpg" alt="Diesel Mega Chief DZ4464">
                 </div>
                 <div class="card__name">
                     Diesel Mega Chief DZ4464
@@ -100,7 +100,7 @@
             </div>
             <div class="card">
                 <div class="card__image">
-                    <img src="images/DieselDZ4569.jpg" alt="main card">
+                    <img src="images/DieselDZ4569.jpg" alt="Diesel Griffed DZ4569">
                 </div>
                 <div class="card__name">
                     Diesel Griffed DZ4569
@@ -117,7 +117,7 @@
             </div>
             <div class="card">
                 <div class="card__image">
-                    <img src="images/DieselDZ4551.jpg" alt="main card">
+                    <img src="images/DieselDZ4551.jpg" alt="Diesel Mega Chief DZ4551">
                 </div>
                 <div class="card__name">
                     Diesel Mega Chief DZ4551
