add for homework_5

--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -63,7 +63,7 @@
                             <a class="search-section__alphabet-link" href="#link 18">Т</a>
                             <a class="search-section__alphabet-link" href="#link 19">У</a>
                             <a class="search-section__alphabet-link" href="#link 20">Ф</a>
-                            <a class="search-section__alphabet-link" href="#link 21">Ф</a>
+                            <a class="search-section__alphabet-link" href="#link 21">X</a>
                             <a class="search-section__alphabet-link" href="#link 22">Ц</a>
                             <a class="search-section__alphabet-link" href="#link 23">Ч</a>
                             <a class="search-section__alphabet-link" href="#link 24">Ш</a>
@@ -499,9 +499,8 @@
                     </div>
                 </section>
             </main>
-
-            <footer>
-
+            <footer class="footer">
+                <div class="footer__content">© Все права защищены авторским правом</div>
             </footer>
         </div>
     </body>
